tests/paczka1/small_fuzzy/95698082.err
Error in line 3: bhFbCxlhGm A426 72,6
Error in line 4: dA2QWHPpD8y A310 20,0
